# legal_langchain

./: .gitignore  README.md  main.py  pyproject.toml
chy/raglangchain/: .env.template  README.md  demo.py  pyproject.toml
chy/raglangchain/conf/: config.yaml
chy/raglangchain/conf/evaluation/: langsmith.yaml
chy/raglangchain/conf/llm/: anthropic.yaml  custom.yaml  mock.yaml  openai.yaml  upstage.yaml
chy/raglangchain/conf/prompt/: qa_legal_free.yaml
chy/raglangchain/conf/retriever/: bm25.yaml  dense.yaml  hybrid.yaml  legalQA.yaml
chy/raglangchain/data/law/: 0000가1111.json  2022누11949.json  2022다200249.json  2022다203798.json  2022다219540.json  2022다223273.json  2022다226234.json  2022다245419.json  2022다245518.json  2022다307003.json  2022도742.json  2022두30072.json  2022두33385.json  2022두47391.json  2022두53716.json  2022두57695.json  2022두64518.json  2023도188.json
chy/raglangchain/logs/: mock_llm_log.txt  multi-turn-echo-log.txt  multi-turn-legal-qa.txt
chy/raglangchain/notebooks/: check_faiss_gpu.ipynb
chy/raglangchain/notebooks/legacy/: main.py  rag_improvement_complete_08240535.py
chy/raglangchain/rag/datasets/: case_docs.py
chy/raglangchain/rag/evaluation/: langsmith_runner.py
chy/raglangchain/rag/history/: chat_history.py
chy/raglangchain/rag/llms/: anthropic.py  base_llm.py  custom.py  mock.py  openai.py  upstage.py
chy/raglangchain/rag/pipeline/: evaluator.py  factory.py  simple.py
chy/raglangchain/rag/retriever/: base_extended.py  dense.py  legal_qa.py
chy/raglangchain/rag/trace/: langsmith.py
chy/raglangchain/rag/utils/: env_loader.py  logger.py
conf/: config.yaml
conf/dataset/: case_docs.yaml
conf/embedder/: jinav3.yaml
conf/evaluation/metrics/: metrics.yaml
conf/prompt/: qa.yaml  qa_legal.yaml
conf/retriever/: frequency.yaml  naive.yaml
data/dummy/: 0000가1111.json
data/law/: 2022누11949.json  2022다200249.json  2022다203798.json  2022다219540.json  2022다223273.json  2022다245419.json  2022다245518.json  2022다307003.json  2022도742.json  2022두30072.json  2022두33385.json  2022두47391.json  2022두53716.json  2022두57695.json  2022두64518.json  2023도188.json
notebooks/legacy/: rag_demo.ipynb  rag_improvement_complete_08240535.py
rag/datasets/: base.py  repository.py
rag/embedder/: jina_v3.py
rag/evaluation/: metrics.py
rag/pipeline/: comparre.py  pipeline_base.py
rag/prompts/: qa_prompt.py  qa_query_eval.py
rag/reference/: naive_referer.py
rag/retriever/: bm25.py  hybrid.py  naive.py  tf.py
rag/utils/: cache.py  langsmith_utils.py
src/: rag_improvement_complete_08231820.py
src/chains/: qa_chain.py
src/components/: embeddings.py  llms.py  retrievers.py  vectorstores.py
src/prompts/: qa_prompts.py
src/utils/: document_loaders.py  langsmith_config.py  langsmith_simple.py  model_comparison.py  path_utils.py  text_splitters.py  version_manager.py
src/web/: streamlit_rag_complete_08231820.py
